# cosmic-ray-api

./: Dockerfile  Procfile  README.md  Taskfile.yml  connect-four-api.cabal  eventstore.sql
app/: Main.hs
docker/eventstore/: Dockerfile  create-db.sh  eventstore.sql
src/: Api.hs  Requests.hs  Responses.hs
src/Connect4/: Board.hs  Commands.hs  Events.hs  GameState.hs  InMemoryEventStore.hs  PostgresEventStore.hs  Types.hs
src/EventSourcing/: EventStore.hs
test/: Spec.hs
